# structure2symmetry

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  setup.py  sitemap.xml
docs/: index.md  symmetry_tutorial.md
search/: search_index.json
structure2symmetry/: symmetry.py  utils.py
tests/: POSCAR  SiC.cif  symmetry.info  symmetry_dataset.txt
